--- a/index.html
+++ b/index.html
@@ -50,15 +50,24 @@
                 <h2>
                     GABRIELA DIAS
                 </h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, consequuntur cumque molestias, 
-                    aliquam qui minima sint est ratione dicta aliquid illo magni ipsa iste doloremque magnam quisquam porro. 
-                    Molestiae, harum!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, consequuntur cumque molestias, 
-                    aliquam qui minima sint est ratione dicta aliquid illo magni ipsa iste doloremque magnam quisquam porro. 
-                    Molestiae, harum!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, consequuntur cumque molestias, 
-                    aliquam qui minima sint est ratione dicta aliquid illo magni ipsa iste doloremque magnam quisquam porro. 
-                    Molestiae, harum!</p>
+                <p>Pode parecer estranho você as vendo isso, mas tinha que expressar isso de alguma forma e como eu não me sinto confortável em fala para os ouros eu fiz este "site".
+                     Talvez possa ser algo de momento mas eu não quero que seja de todas as garotas que eu já "gostei" você foi a única que eu realmente GOSTEI
+                     (para não dizer outra coisa. Acho que iria ficar mais estranho do que já está). Eu já prestava atenção em você antes, 
+                     toda curtida que você dava fazia meu dia. Desde o dia que conversamos pela primeira vez foi algo inacreditável. 
+                     Aquela simples mensagem fez meu dia, minha semana , meu mês praticamente. E quando menos percebi a gente já estava conversando todos os dias o tempo inteiro, 
+                     compartilhando rotina, experiencias e tudo mais. Toda mensagem que eu mandava sempre vinha de alguns minutos pensando, ou perguntas para amigos do que falar.
+                </p>
+                <p>Quanto mais eu te conhecia mais eu me amarrava em você. SERIO, ONDE MAIS EU ACHO ALGUEM QUE COZINHA, FAZ Crochê, BILÍNGUE, GUITARRISTA, COSTUREIRA, NADADORA, JOGADORA DE VOLEI.SERIO CARA VOCE É INCRIVEL. Todo vídeo e foto de visualização única que você mandou eu revia e revia varias vezes.
+                     Quando me convidou para ir na sua casa você não tem noção na FELICIDADE QUE FIQUEI, e quando falou que não daria parecia que meu coração iria parar. 
+                     Ficar com você naquela tarde foi incrível(por mais que a gente tenha feito quase nada), quando eu te vi na skin Gabriela "desarrumada" só me apaixonei mais ainda.
+                </p>
+                <p>Pode parecer de mais mas eu não sei gostar pouco, eu sou intenso , emocionado, eu olho no celular a cada dois minutos para ver se tem mensagem sua. 
+                    Comecei a ser fiel sem nem mesmo a gente ter algo, parei de seguir todas as mulheres que postavam coisas do corpo(eram todas atletas), não quis mais saber de outras garotas no colégio. 
+                    Por sua causa me deu vontade de me tornar alguém melhor ,comecei a ler (já estava enrolando a muito tempo), comecei a focar mais no meu inglês, comecei a estudar mais, parei de procrastinar (pelo menos parte do tempo). 
+                    Enfim fiz esse site para liberar toda tensão que estava preso em mim. Se por acaso não sente a mesma coisa, esta tudo bem, essas coisas acontecem e talvez eu tenha confundido a situação. 
+                    Entretanto se for reciproco eu  estou a disposto a tentar algo serio e duradouro. 
+
+                </p>
             </div>
          </div>
          <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
